--- a/landing.html
+++ b/landing.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Aquahold</title>
 		
-		
+		<!--link href='http://fonts.googleapis.com/css?family=Esteban' rel='stylesheet' type='text/css'-->
+		<link href='http://fonts.googleapis.com/css?family=Ledger' rel='stylesheet' type='text/css'>
 		<link type="text/css" rel="stylesheet" href="bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet" href="landing.css" />
 		<link type="text/css" rel="stylesheet" href="homeview.css" /> 
@@ -12,39 +13,56 @@
 	<body>
 		
 		<header id="header" class="main">
-				 <span style="font-family: BlackJack;font-size: 50px;">
-		         	<a id="logo" href="/" rel="#default">Aquahold</a>
-		         </span>
-		        
-		        <div id="header-color">
-		         	<ul class="nav nav-pills" id="social-color">
-		         		<li></li>
-		         		<li><a href="http://www.youtube.com/channel/UC0zSH1l_uzXH7JVFv9Z1U7Q	" target="_blank" class="social">
-							<img src="picons03.png" />
-						</a></li>
-							<li><a href="https://plus.google.com/u/1/114097380023876769313/posts" target="_blank" class="social">
-							<img src="picons06.png" />
-						</a></li>
+			 <span>
+	         	<a id="logo" href="/" rel="#default"><img src="logo.png"></a>
+	         </span>
+	        <nav id="header-color">
+	         	<ul class="nav nav-pills" id="social-color">
+	         		<li></li>
+	         		<li><a href="" target="_blank" class="social">
+						<img src="picons03.png" />
+					</a></li>
 						<li><a href="" target="_blank" class="social">
-							<img src="picons11.png" />
-						</a></li>
-		            	<li><a href="http://www.facebook.com/Trokxi" class="social" target="_blank">
-								<img src="picons18.png" />
-						</a></li>
-						<li><a href="http://www.facebook.com/Trokxi" class="social" target="_blank">
-								<img src="picons38.png" />
-						</a></li>
-						<li><a href="http://www.facebook.com/Trokxi" class="social" target="_blank">
-								<img src="picons40.png" />
-						</a></li>
-		            </ul>
-		          </div>
-			</header>
+						<img src="picons06.png" />
+					</a></li>
+					<li><a href="" class="social" target="_blank">
+							<img src="picons40.png" />
+					</a></li>
+					<li><a href="" target="_blank" class="social">
+						<img src="picons11.png" />
+					</a></li>
+	            	<li><a href="" class="social" target="_blank">
+							<img src="picons18.png" />
+					</a></li>
+					<li><a href="" class="social" target="_blank">
+							<img src="picons38.png" />
+					</a></li>
+	            </ul>
+	          </nav>
+		</header>
 		<div id="bike-pic">
 				
-		         <img src="bike5.png" >
 		</div>
-		<button class="btn btn-large btn-info" type="button" style="margin-top: -460px;margin-left: 250px;">Order now!</button>
+		<button class="btn btn-large btn-info" id="promo-button" type="button">
+				Signup for a free bottle!
+		</button>
 		
+		<div id="div-color">
+			<nav id="div-nav">
+				<ul class="nav nav-pills" id="social-color">
+	         		<li style="margin-top:9px;margin-right:30px;" >In partnership with:  </li>
+	         		<li><a href="" target="_blank" class="social">
+						<img src="letourdefrance.gif" />
+					</a></li>
+						<li><a href="" target="_blank" class="social">
+						<img src="evian.jpg" />
+					</a></li>
+					<li><a href="" class="social" target="_blank">
+							<img src="pinarello.jpg" style="margin-right:0px;width:95px;height:25px;"/>
+					</a></li> 
+					<li style="margin-top:9px;margin-left:30px;" >&copy 2013</li>
+	            </ul>
+			</nav
+		</div>
 	</body>
 </html>
