--- a/landing.html
+++ b/landing.html
@@ -8,6 +8,8 @@
 		<link type="text/css" rel="stylesheet" href="bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet" href="landing.css" />
 		<link type="text/css" rel="stylesheet" href="homeview.css" /> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 	</head>
 	
 	<body>
